# design-patterns-example

./: .gitignore  README.md
DotNet/: DotNet.csproj  Log.txt  Program.cs
DotNet/Patterns/: Adapter.cs  Command.cs  Factory.cs  Observer.cs
Python/: pyproject.toml  test.py
Python/Behavior/ChainOfResponsibility/: chains.py
Python/Behavior/Iterator/: iterator.py
Python/Behavior/Observer/: observer.py
Python/Behavior/State/: state.py
Python/Behavior/Strategy/: main.py  strategy.py
Python/Behavior/Strategy/strategy/: abc_strategy.py  fedex_strategy.py  order.py  postal_strategy.py  shipping_cost.py  ups_strategy.py
Python/Behavior/Visitor/: visitor.py
Python/Creational/Builder/: builder.py
Python/Creational/Factory/: abstract.py  factory.py
Python/Creational/Prototype/: proto.py
Python/Creational/Singleton/: singleton.py
Python/Structural/Adapter/: adapter.py
Python/Structural/Bridge/: bridge.py
Python/Structural/Composite/: composite.py
Python/Structural/Decorator/: decorator.py
Python/Structural/Proxy/: proxy.py
