[tool.poetry]
name = "design patterns"
version = "0.1.0"
description = ""
authors = ["Viktor Sokolov <viktorsokolov.and@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
